Replace position box

--- a/rent.html
+++ b/rent.html
@@ -43,13 +43,13 @@
                     <div>aeaze</div>
                     <div>aeaze</div>
                 </div>
-                <div style="background-color:blueviolet;">
+                <div class="zone" style="background-color:blueviolet;">
                     <!--bloque image gauche-->
-                    <div>
+                    <div class="sous-zone">
                         image gauche
                     </div>
                     <!--bloque image + texte au-dessus -->
-                        <div style="background-color:rgb(189, 226, 43);">
+                        <div  class="sous-zone" style="background-color:rgb(189, 226, 43);">
                             <div>
                         image bas gauche
                             </div>
