--- a/rent.html
+++ b/rent.html
@@ -37,12 +37,22 @@
             <!-- zone Recherche + zone gauche -->
             <div class="sous-zone">
                 <!-- bloque recherche -->
-                <div style="background-color:blue;">
-                    <div>eazeze</div>
-                    <div>aaeaze</div>
-                    <div>aeaze</div>
-                    <div>aeaze</div>
-                </div>
+                <form style="background-color:blue;">
+                    <div>
+                        <label>Lieu :</label>
+                        <input type="text" placeholder="Adresse, département, région, etc...">
+                    </div>
+                    <div>
+                        <label>Prix :</label>
+                        <input type="text" placeholder="Prix en euros">
+                    </div>
+                    <div>
+                        <button type="button">Filtres</button>
+                    </div>
+                    <div>
+                        <button type="button">Recherche</button>
+                    </div>
+                </form>
                 <div class="zone" style="background-color:blueviolet;">
                     <!--bloque image gauche-->
                     <div class="sous-zone">
@@ -50,22 +60,20 @@
                     </div>
                     <!--bloque image + texte au-dessus -->
                         <div  class="sous-zone" style="background-color:rgb(189, 226, 43);">
-                            <div>
-                        image bas gauche
-                            </div>
-                            <div>
-                        texte gauche
-                            </div>
+                            <div><h2>Informations sur les services</h2></div>
+                            <div><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius dolorem nisi ipsa nesciunt, possimus debitis? Quod eaque similique unde nam voluptatibu</p></div>
+                            <div><img class="pict" src="./asset/images/rent/maison.jpg" alt=""></div>
                         </div>
                 </div>
             </div>
             <!-- zone droite + image -->
-            <div>
-                <div>
-                    image droite
+            <div  class="sous-zone" style="background-color:rgb(226, 43, 46);">
+                <div  style="background-color:rgb(226, 43, 198);">
+                    <img class="pict" src="./asset/images/rent/maison.jpg" alt="">
                 </div>
+                <div><h2>Informations sur les services</h2></div>
                 <div>
-                    texte bas gauche
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius dolorem nisi ipsa nesciunt, possimus debitis? Quod eaque similique unde nam voluptatibu</p>
                 </div>
             </div>
         </div>
