--- a/aboutus.html
+++ b/aboutus.html
@@ -6,13 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Qui somme nous ?</title>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400..800&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@500&family=Open+Sans&display=swap"
-        rel="stylesheet">
 
     <link rel="stylesheet" href="./asset/css/aboutus.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
@@ -42,15 +35,12 @@
     </header>
 
     <main>
-
         <section class="qsn">
             <article>
                 <div class="rectangle-noir1">
                     <h1>
                         Qui sommes nous ?
                     </h1>
-                </div>
-                <div class="rectangle-noir2">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                         laoreet et sem id ornare. Vivamus mauris augue,
                         egestas id nisl ac, pulvinar tristique dui. Nam luctus eros nec
@@ -67,8 +57,6 @@
                     <h1>
                         Notre mission
                     </h1>
-                </div>
-                <div class="rectangle-noir2">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                         laoreet et sem id ornare. Vivamus mauris augue,
                         egestas id nisl ac, pulvinar tristique dui. Nam luctus eros nec
@@ -85,8 +73,6 @@
                     <h1>
                         Notre équipe
                     </h1>
-                </div>
-                <div class="rectangle-noir2">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                         laoreet et sem id ornare. Vivamus mauris augue,
                         egestas id nisl ac, pulvinar tristique dui. Nam luctus eros nec
@@ -103,8 +89,6 @@
                     <h1>
                         Nos valeurs
                     </h1>
-                </div>
-                <div class="rectangle-noir2">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                         laoreet et sem id ornare. Vivamus mauris augue,
                         egestas id nisl ac, pulvinar tristique dui. Nam luctus eros nec
@@ -117,12 +101,10 @@
 
         <section class="pourquoi">
             <article>
-                <div class="rectangle-noir3">
+                <div class="rectangle-noir1">
                     <h1>
                         Pourquoi choisir ACGDIMMO ?
                     </h1>
-                </div>
-                <div class="rectangle-noir2">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                         laoreet et sem id ornare. Vivamus mauris augue,
                         egestas id nisl ac, pulvinar tristique dui. Nam luctus eros nec
@@ -133,7 +115,7 @@
             </article>
         </section>
 
-        <article>
+        <article class="vert">
             <div class="rectangle-vert">
                 <p class="p2">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Sed viverra, lorem non placerat congue, erat nunc
@@ -206,3 +188,4 @@
 </body>
 
 </html>
+
