--- a/to_manage.html
+++ b/to_manage.html
@@ -3,32 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="asset/css/to_manage.css">
     <title>Faire gérer</title>
 </head>
 <body>
     <!-- Header -->
-    <header class="header flex-between">
-        <!-- Logo -->
-        <div class="logo_header">
-            <img src="asset/images/logo x150.png" alt="logoacgd" width="150" height="75">
-        </div>
+    <header class="header flex justify-content align-item">    
+        <!-- Logo ACGD-->
+        <img class="logo" src="./asset/images/logo x150.png" alt="logo">
         <!-- Menu Nav -->
-        <div>
-            <nav>
-                <ul class="menu flex-center">
-                    <li><a href="buy.html">Acheter</a></li>
-                    <li><a href="sell.html">Vendre</a></li>
-                    <li><a href="rent.html">Louer</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-            </nav>
-        </div>
-        <!-- Me connecter -->
-        <div class="button_connect">
-            <button>
-                <a href="#"> Me connecter</a>
-            </button>
+        <nav>
+            <ul class="menu flex justify-content">
+                <li><a class="title-txt" href="buy.html">Acheter</a></li>
+                <li><a class="title-txt" href="rent.html">Louer</a></li>
+                <li><a class="title-txt" href="sell.html">Vendre</a></li>
+                <li><a class="title-txt" href="contact.html">Contact</a></li>
+            </ul>            
+        </nav>
+        <!-- Bouton connexion -->
+        <div class="logo-mon-compte">
+            <a class="active" href="#Mon compte"><i class="fa-solid fa-user"></i> Mon compte</a>
         </div>
     </header>
     <!-- Bloc barre de recherche -->
@@ -66,9 +61,9 @@
                     </h1>
             </header>
             <main>
-                    <img class="image_service_1" src="asset/images/to_manage/image_to_manage1.jpg" alt="image_home" width="610px" height="510px">
+                    <img class="image_service_1" src="asset/images/to_manage/image_to_manage1.jpg" alt="image_home">
             </main>
-            <footer>
+            <footer class="footer_article">
                     <p class="text_service">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce volutpat 
                         tristique ex. Etiam a volutpat sem. Nunc risus sapien, faucibus ut 
@@ -90,9 +85,9 @@
                 </h1>
             </header>
             <main>
-                <img class="image_service2" src="asset/images/to_manage/image_to_manage2.jpg" alt="image_home_2" width="610px" height="510px">
+                <img class="image_service2" src="asset/images/to_manage/image_to_manage2.jpg" alt="image_home_2">
             </main>
-            <footer>
+            <footer class="footer_article">
                 <p class="text_service2">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce volutpat 
                     tristique ex. Etiam a volutpat sem. Nunc risus sapien, faucibus ut 
@@ -118,123 +113,79 @@
         <!-- Logo -->
         <main>
             <div class="icone_stats">
-                <img src="asset/images/to_manage/icone_stats_1.svg" alt="icone1">
-                <img src="asset/images/to_manage/icone_stats_2.svg" alt="icone2">
-                <img src="asset/images/to_manage/icone_stats_3.svg" alt="icone3">
-                <img src="asset/images/to_manage/icone_stats_4.svg" alt="icone4">
-                <img src="asset/images/to_manage/icone_stats_5.svg" alt="icone5">
+                <div>
+                    <img src="asset/images/to_manage/icone_stats_1.svg" alt="icone_stats">
+                    <p>120 000 Lots</p>
+                </div>
+                <div>
+                    <img src="asset/images/to_manage/icone_stats_2.svg" alt="icone_stats">
+                    <p>120 000 Lots</p>
+                </div>
+                <div>
+                    <img src="asset/images/to_manage/icone_stats_3.svg" alt="icone_stats">
+                    <p>120 000 Lots</p>
+                </div>
+                <div>
+                    <img src="asset/images/to_manage/icone_stats_4.svg" alt="icone_stats">
+                    <p>120 000 Lots</p>
+                </div>
+                <div>
+                    <img src="asset/images/to_manage/icone_stats_5.svg" alt="icone_stats">
+                    <p>120 000 Lots</p>
+                </div>
             </div>
         </main>
-        <!-- les chiffres -->
-        <footer>
-            <div class="text_stats">
-                <p>
-                    120 000 
-                    Lots
-                </p>
-                <p>
-                    120 000 
-                    Lots
-                </p>
-                <p>
-                    120 000 
-                    Lots
-                </p>
-                <p>
-                    120 000 
-                    Lots
-                </p>
-                <p>
-                    120 000 
-                    Lots
-                </p>
-            </div>
-        </footer>
     </section>
-    <footer class="footer_to_manage">
-        <!-- logo + texte + icone RS -->
-        <div class="logo-text-icon">
-            <a href="index.html">
-                <img class="logo_acgd_footer" src="asset/images/logo_white_150.png" alt="logoacgd" width="200" height="">
-            </a>
-            <!-- Texte + Hyper lien logo RS-->
-            <div>
-                <p class="text_footer">
-                    Retrouvez-nous sur nos réseaux sociaux
-                </p>
-                <ul class="logo_footer">
-                    <li>
-                        <a href=""><img src="asset/images/facebook-logo.png" alt="logo Facebook"></a>
-                    </li>
-                    <li>
-                        <a href=""><img src="asset/images/twitter-logo.png" alt="logo twitter"></a>
-                    </li>
-                    <li>
-                        <a href=""><img src="asset/images/instagram-logo.png" alt="logo instagram"></a>
-                    </li>
+    <footer>
+        <div class="colonne">
+            <!-- Logo + Reseaux sociaux-->
+            <div class="footer-logo">
+                <a href="index.html"><img src="./asset/images/logo_white_150.png" alt="Logo"></a>
+                <p>Retrouvez-nous sur les réseaux sociaux</p>
+
+                <ul class="social-media">
+                    <li><i class="fa-brands fa-facebook"></i></li>
+                    <li><i class="fa-brands fa-twitter"></i></li>
+                    <li><i class="fa-brands fa-instagram"></i></li>
+                </ul>
+            </div>
+            <!-- Services -->
+            <div class="footer-service">
+                <h2>Services</h2>
+
+                <ul class="flex">
+                    <li>Achat</li>
+                    <li>Vendre</li>
+                    <li>Louer</li>
+                </ul>
+            </div>
+            <!-- Accès Rapide -->
+            <div class="footer-acces">
+                <h2>Accès rapide</h2>
+
+                <ul class="flex">
+                    <li>Inscription newsletter</li>
+                    <li>Qui sommes-nous ?</li>
+                    <li>Nos offres d'emploi</li>
+                    <li>Avis client</li>
+                    <li>Plan du site</li>
+                </ul>
+            </div>
+            <!-- Contact -->
+            <div class="footer-contact">
+                <h2>Contact</h2>
+
+                <ul class="flex">
+                    <li>06.08.16.45.22</li>
+                    <li>contact@acgdimmo.fr</li>
+                    <li>Saint-Junien</li>
                 </ul>
             </div>
         </div>
-        <!-- Services -->
-        <div class="block_services">
-            <h2>
-                Services
-            </h2>
-            <ul>
-                <li>
-                    <a href="buy.html">Achat</a>
-                </li>
-                <li>
-                    <a href="sell.html">Vendre</a>
-                </li>
-                <li>
-                    <a href="rent.html">Louer</a>
-                </li>
-            </ul>
-        </div>
-        <!-- Accès Rapide -->
-        <div class="block_acces_rapide">
-            <h2>
-                Accès rapide
-            </h2>
-            <ul>
-                <li>
-                    <a href="">Inscription Newsletter</a>
-                </li>
-                <li>
-                    <a href="">Qui sommes-nous ?</a>
-                </li>
-                <li>
-                    <a href="">Nos offres d'emploi</a>
-                </li>
-                <li>
-                    <a href="">Avis client</a>
-                </li>
-                <li>
-                    <a href="">Plan du site</a>
-                </li>
-            </ul>
-        </div>
-        <!-- Contact -->
-        <div class="block_contact">
-            <h2>
-                Contact
-            </h2>
-            <ul>
-                <li>
-                    <img src="asset/images/to_manage/noun-phone-6444426.svg" alt="icone_phone" width="30px" height="30px">
-                    <a href="">06.08.16.45.22</a>
-                </li>
-                <li>
-                    <img src="asset/images/to_manage/noun-mail-430296.svg" alt="icone_mail" width="30px" height="30px">
-                    <a href="">contact@acgdiimo.fr</a>
-                </li>
-                <li>
-                    <img src="asset/images/to_manage/noun-location-4832828.svg" alt="icone_mail" width="30px" height="30px">
-                    <a href="">Saint-Junien</a>
-                </li>
-            </ul>
-        </div>
+            <div class="copyright">
+                <p>acgdimmo©</p>
+            </div>
+    
     </footer>
 </body>
 </html>
