--- a/offers.html
+++ b/offers.html
@@ -39,15 +39,16 @@
                 <form>
                     <div class="logo-form">
                         <i class="fa-solid fa-briefcase"></i>
-                          <input id="form" type="text" placeholder="Emploi">
-                        </div>
-            </form>
-            <form>  
-                <div class="logo-form2">
-                    <i class="fa-solid fa-location-dot"></i>
-                <input id="form" type="text" placeholder="Où">
-                </div>
-            </form>
+                        <input id="form" type="text" placeholder="Emploi">
+                    </div>
+                </form>
+                <form>
+                    <div class="logo-form2">
+                        <i class="fa-solid fa-location-dot"></i>
+                        <input id="form" type="text" placeholder="Où">
+                    </div>
+                </form>
+                <div class="responsive-research">   
                 <input id="research" type="submit" value="Rechercher">
             </div>
             <div class="form-contract">
@@ -94,27 +95,33 @@
                     </a>
         </section>
         <section class="section2">
-            <div class="section2-photos">
-                <a href="offers-last.html">
-                    <img id="offer-photo" src="asset/images/offers/photo_offer.jpg" alt="photo de l'offre">
-                    <!-- j'essaye d'arrondir les bords de ces photos-->
-                    <figcaption class="agent">Agent immobilier F/H</figcaption>
-                </a>
+            <div class="photos-map2">
+                <div class="section2-photos">
+                    <a href="offers-last.html">
+                        <img id="offer-photo" src="asset/images/offers/photo_offer.jpg" alt="photo de l'offre">
+                        <!-- j'essaye d'arrondir les bords de ces photos-->
+                        <figcaption class="agent">Agent immobilier F/H</figcaption>
+                    </a>
+                </div>
+                <div class="section2-photos">
+                    <a href="offers-last.html">
+                        <img id="offer-photo" src="asset/images/offers/photo_offer.jpg"" alt=" photo de l'offre">
+                        <figcaption class="agent">Agent immobilier F/H</figcaption>
+                    </a>
+                </div>
+                <div class="section2-photos">
+                    <a href="offers-last.html">
+                        <img id="offer-photo" src="asset/images/offers/photo_offer.jpg" alt="photo de l'offre">
+                        <figcaption class="agent">Agent immobilier F/H</figcaption>
+                    </a>
+                </div>
             </div>
-            <div class="section2-photos">
-                <a href="offers-last.html">
-                    <img id="offer-photo" src="asset/images/offers/photo_offer.jpg"" alt=" photo de l'offre">
-                    <figcaption class="agent">Agent immobilier F/H</figcaption>
-                </a>
+            <div class="responsive-map">
+            <iframe id="map"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d88855.56780126509!2d0.802923295652055!3d45.89658301200862!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47feeadaef87b0c9%3A0x8b265b0dc126d53e!2s87200%20Saint-Junien!5e0!3m2!1sfr!2sfr!4v1705492808751!5m2!1sfr!2sfr"
+                width="300" height="250" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
-            <div class="section2-photos">
-                <a href="offers-last.html">
-                    <img id="offer-photo" src="asset/images/offers/photo_offer.jpg" alt="photo de l'offre">
-                    <figcaption class="agent">Agent immobilier F/H</figcaption>
-                </a>
-            </div>
-            </div>
-            <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d88855.56780126509!2d0.802923295652055!3d45.89658301200862!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47feeadaef87b0c9%3A0x8b265b0dc126d53e!2s87200%20Saint-Junien!5e0!3m2!1sfr!2sfr!4v1705492808751!5m2!1sfr!2sfr" width="300" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>       
         </section>
         <ul class="paging">
             <div>
@@ -132,13 +139,13 @@
             <div id="form-container">
                 <label for="page-select"></label>
                 <select id="page-select">
-                  <option value="page1">Page 1</option>
-                  <option value="page2">Page 2</option>
-                  <option value="page3">Page 3</option>
-                  <option value="page3">Page 4</option>
-                  <option value="page3">Page 5</option>
+                    <option value="page1">Page 1</option>
+                    <option value="page2">Page 2</option>
+                    <option value="page3">Page 3</option>
+                    <option value="page3">Page 4</option>
+                    <option value="page3">Page 5</option>
                 </select>
-              </div>
+            </div>
             </li>
         </ul>
         <p id="announce-number">... - ... sur ... annonces</p>
@@ -158,20 +165,23 @@
                     <p class="description"> <span> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                             eiusmod
                             tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                            exercitation ullamco laboris nisi ut aliquip ex eaodot. Ut enim ad minim veniam, quis nostrud
-                            exercitation ullamco laboris nisi ut aliquip ex eaodot. Ut enim ad minim veniam, quis nostrud
+                            exercitation ullamco laboris nisi ut aliquip ex eaodot. Ut enim ad minim veniam, quis
+                            nostrud
+                            exercitation ullamco laboris nisi ut aliquip ex eaodot. Ut enim ad minim veniam, quis
+                            nostrud
                             exercitation ullamco laboris nisi ut aliquip ex eaodot.</span></p>
                 </div>
                 <div class="photo7">
                     <img id="agency" src="asset/images/offers/agency.jpg" alt="photo 2" width="537.5">
                 </div>
             </div>
-                <h3 class="testimonies">Témoignages de l'équipe</h3>
+            <h3 class="testimonies">Témoignages de l'équipe</h3>
             <div class="photo123">
                 <div class="photo">
                     <img id="team" src="asset/images/offers/real_estate_agent_1.jpg" alt="photo 1" width="200px">
                     <figcaption> <strong> Lorem - dolor sit </strong> </figcaption>
-                    <p class="testimony"> <i class="testimony1"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                    <p class="testimony"> <i class="testimony1"> Lorem ipsum dolor sit amet, consectetur adipiscing
+                            elit, sed do eiusmod
                             tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
                             exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</i></p>
                 </div>
@@ -199,9 +209,13 @@
                 <p>Retrouvez-nous sur nos réseaux sociaux</p>
 
                 <ul class="social-media">
-                    <a href="#"><li><i id="fb" class="fa-brands fa-facebook"></i></li></a>
-                    <a href="#"></a><li><i id="tw" class="fa-brands fa-twitter"></i></li></a>
-                    <a href="#"></a><li><i id="insta" class="fa-brands fa-instagram"></i></li></a>
+                    <a href="#">
+                        <li><i id="fb" class="fa-brands fa-facebook"></i></li>
+                    </a>
+                    <a href="#"></a>
+                    <li><i id="tw" class="fa-brands fa-twitter"></i></li></a>
+                    <a href="#"></a>
+                    <li><i id="insta" class="fa-brands fa-instagram"></i></li></a>
                 </ul>
             </div>
 
@@ -209,20 +223,36 @@
                 <h2>Services</h2>
 
                 <ul class="flex">
-                    <a href="buy.html"><li>Achat</li></a>
-                    <a href="sell.html"><li>Vendre</li></a>
-                    <a href="rent.html"><li>Louer</li></a>
+                    <a href="buy.html">
+                        <li>Achat</li>
+                    </a>
+                    <a href="sell.html">
+                        <li>Vendre</li>
+                    </a>
+                    <a href="rent.html">
+                        <li>Louer</li>
+                    </a>
                 </ul>
             </div>
             <div class="footer-access">
                 <h2>Accès rapide</h2>
 
                 <ul class="flex">
-                    <a href="newsletter registration.html"><li>Inscription newsletter</li></a>
-                    <a href="aboutus.html"><li>Qui sommes-nous ?</li></a>
-                    <a href="offers.html"><li>Nos offres d'emploi</li></a>
-                    <a href="customer-feedback.html"><li>Avis client</li></a>
-                    <a href="sitemap.html"><li>Plan du site</li></a>
+                    <a href="newsletter registration.html">
+                        <li>Inscription newsletter</li>
+                    </a>
+                    <a href="aboutus.html">
+                        <li>Qui sommes-nous ?</li>
+                    </a>
+                    <a href="offers.html">
+                        <li>Nos offres d'emploi</li>
+                    </a>
+                    <a href="customer-feedback.html">
+                        <li>Avis client</li>
+                    </a>
+                    <a href="sitemap.html">
+                        <li>Plan du site</li>
+                    </a>
                 </ul>
             </div>
             <div class="footer-contact">
@@ -230,14 +260,19 @@
 
                 <ul class="flex">
                     <li class="number">06.08.16.45.22</li>
-                    <a href="mailto:contact@acgdimmo.fr"><li>contact@acgdimmo.fr</li></a>
-                    <a href="https://www.google.fr/maps/place/87200+Saint-Junien/@45.8964635,0.802924,12z/data=!3m1!4b1!4m6!3m5!1s0x47feeadaef87b0c9:0x8b265b0dc126d53e!8m2!3d45.88716!4d0.901165!16zL20vMDh6Xzkz?entry=ttu"><li>Saint-Junien</li></a>
+                    <a href="mailto:contact@acgdimmo.fr">
+                        <li>contact@acgdimmo.fr</li>
+                    </a>
+                    <a
+                        href="https://www.google.fr/maps/place/87200+Saint-Junien/@45.8964635,0.802924,12z/data=!3m1!4b1!4m6!3m5!1s0x47feeadaef87b0c9:0x8b265b0dc126d53e!8m2!3d45.88716!4d0.901165!16zL20vMDh6Xzkz?entry=ttu">
+                        <li>Saint-Junien</li>
+                    </a>
                 </ul>
             </div>
         </div>
-            <div class="copyright">
-                <p>acgdimmo©</p>
-            </div>
+        <div class="copyright">
+            <p>acgdimmo©</p>
+        </div>
     </footer>
 </body>
 
