Reste responsive + image

--- a/estimate.html
+++ b/estimate.html
@@ -25,6 +25,7 @@
         <div class="logo-mon-compte">
             <a class="active" href="#Mon compte"><i class="fa-solid fa-user"></i> Mon compte</a>
         </div>
+        <div id="icons"></div>
     </header>
     <!--Partie case estimation-->
 
