--- a/index.html
+++ b/index.html
@@ -174,9 +174,11 @@
                 <img src="asset/images/logo_white_150.png" alt="logo acgdimmo" width="150" height="73">
             </a>
             <p>Retouvez-nous sur les réseaux sociaux</p>
-            <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
-            <a href="#"><i class="fa-brands fa-square-twitter"></i></a>
-            <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
+            <div  class="section_social_media">
+                <span class="social_media"><a href="#"><i class="fa-brands fa-square-facebook"></i></a></span>
+                <span class="social_media"><a href="#"><i class="fa-brands fa-square-twitter"></i></a></span>
+                <span class="social_media"><a href="#"><i class="fa-brands fa-square-instagram"></i></a></span>
+            </div>
         </div>
 
         <div class="column2">
@@ -202,9 +204,9 @@
         <div class="column4">
             <ul>
                 <li class="menu_footer">Contact</li>
-                <li><i class="fa-solid fa-phone"></i>   07 06 05 04 03</li>
-                <li><i class="fa-solid fa-at"></i>   contact@acgdimmo.fr</li>
-                <li><i class="fa-solid fa-location-dot"></i>   Saint-Junien</li>
+                <li><i class="fa-solid fa-phone"></i><span>07 06 05 04 03</span></li>
+                <li><i class="fa-solid fa-at"></i><span>contact@acgdimmo.fr</span></li>
+                <li><i class="fa-solid fa-location-dot"></i><span>Saint-Junien</span></li>
             </ul>
         </div>
     </footer>
