--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
     <section>
         <article class="contact">
             <h1>NOUS CONTACTER</h1>
-            <p><i>Nous engageons à vous répondre sous 48h ouvrés</i></p>
+            <p><i>Nous nous engageons à vous répondre sous 48h ouvrés</i></p>
         </article>
     </section>
 
@@ -89,8 +89,9 @@
                 <label for="message">
                     <textarea name="textarea" rows="5" cols="45" id="message" placeholder="Votre message :"></textarea>
                 </label>
-
-                <button type="submit">Envoyer</button>  
+                <div class="button">
+                    <button type="submit">Envoyer</button>  
+                </div>
             </form>            
         </article>
     </section>
