--- a/estimate.html
+++ b/estimate.html
@@ -107,7 +107,7 @@
                 </ul>
             </div>
 
-            <div class="footer-service">
+            <div class="footer-services">
                 <h2>Services</h2>
 
                 <ul class="flex">
@@ -116,7 +116,7 @@
                     <li>Louer</li>
                 </ul>
             </div>
-            <div class="footer-acces">
+            <div class="footer-access">
                 <h2>Accès rapide</h2>
 
                 <ul class="flex">
