--- a/to_manage.html
+++ b/to_manage.html
@@ -138,47 +138,44 @@
     </section>
     <footer>
         <div class="colonne">
-            <!-- Logo + Reseaux sociaux-->
             <div class="footer-logo">
-                <a href="index.html"><img src="./asset/images/logo_white_150.png" alt="Logo"></a>
+                <a href="index.html"><img class="logo" src="./asset/images/logo_white_150.png" alt="Logo"></a>
                 <p>Retrouvez-nous sur les réseaux sociaux</p>
 
                 <ul class="social-media">
-                    <li><i class="fa-brands fa-facebook"></i></li>
-                    <li><i class="fa-brands fa-twitter"></i></li>
-                    <li><i class="fa-brands fa-instagram"></i></li>
+                    <li><i  id="fb" class="fa-brands fa-facebook"></i></li>
+                    <li><i  id="tw" class="fa-brands fa-twitter"></i></li>
+                    <li><i  id="insta" class="fa-brands fa-instagram"></i></li>
                 </ul>
             </div>
-            <!-- Services -->
-            <div class="footer-service">
+
+            <div class="footer-services">
                 <h2>Services</h2>
 
                 <ul class="flex">
-                    <li>Achat</li>
-                    <li>Vendre</li>
-                    <li>Louer</li>
+                    <li><a href="buy.html">Achat</a></li>
+                    <li><a href="sell.html">Vendre</a></li>
+                    <li><a href="rent.html">Louer</a></li>
                 </ul>
             </div>
-            <!-- Accès Rapide -->
-            <div class="footer-acces">
+            <div class="footer-access">
                 <h2>Accès rapide</h2>
 
                 <ul class="flex">
-                    <li>Inscription newsletter</li>
-                    <li>Qui sommes-nous ?</li>
-                    <li>Nos offres d'emploi</li>
-                    <li>Avis client</li>
-                    <li>Plan du site</li>
+                    <li><a href="newsletter registration.html">Inscription newsletter</a></li>
+                    <li><a href="aboutus.html">Qui sommes-nous ?</a></li>
+                    <li><a href="offers.html">Nos offres d'emploi</a></li>
+                    <li><a href="customer-feedback.html">Avis client</a></li>
+                    <li><a href="sitemap.html">Plan du site</a></li>
                 </ul>
             </div>
-            <!-- Contact -->
             <div class="footer-contact">
                 <h2>Contact</h2>
 
                 <ul class="flex">
-                    <li>06.08.16.45.22</li>
-                    <li>contact@acgdimmo.fr</li>
-                    <li>Saint-Junien</li>
+                    <li><a href="tel:06.08.16.45.22">06.08.16.45.22</a></li>
+                    <li><a href="mailto:contact@acgdimmo.fr">contact@acgdimmo.fr</li></a>
+                    <li><a target="_blank" href="https://www.google.fr/maps/place/87200+Saint-Junien/@45.8964635,0.802924,12z/data=!3m1!4b1!4m6!3m5!1s0x47feeadaef87b0c9:0x8b265b0dc126d53e!8m2!3d45.88716!4d0.901165!16zL20vMDh6Xzkz?entry=ttu"><li>Saint-Junien</li></a>
                 </ul>
             </div>
         </div>
