--- a/rent.html
+++ b/rent.html
@@ -139,11 +139,10 @@
         <div>
             <div><p><img src="./asset/images/logo_white_150.png" alt=""></p></div>
             <div><p>Retrouvez-nous sur nos réseaux sociaux</p></div>
-            <div><p>
-                    <img src="asset/images/facebook-logo.png" alt="">
-                    <img src="asset/images/twitter-logo.png" alt="">
-                    <img src="asset/images/instagram-logo.png" alt="">
-                </p>
+            <div class="social-media">
+                <i  id="fb" class="fa-brands fa-facebook"></i>
+                <i  id="tw" class="fa-brands fa-twitter"></i>
+                <i  id="insta" class="fa-brands fa-instagram"></i>
             </div>
         </div>
         <ul>
