--- a/contact.html
+++ b/contact.html
@@ -27,26 +27,26 @@
 </header>
 
 <main>
-    <section>
+    <section class="page-title">
         <article class="contact">
             <h1>NOUS CONTACTER</h1>
             <p><i>Nous nous engageons à vous répondre sous 48h ouvrés</i></p>
         </article>
     </section>
 
-    <section class="contactform">
+    <section class="phone-numbers">
         <article class="phone">
-            <h2>Pour une question relative à une annonce :</h2>
-            <h3><i>Contacter l'agence au 01.02.03.04.05</i></h3>
+            <p><strong>Pour une question relative à une annonce :</strong></p>
+            <p><i>Contacter l'agence au 01.02.03.04.05</i></p>
         </article>
         <article class="phone">
-            <h2>Pour une prise de rendez-vous pour une visite :</h2>
-            <h3><i>Contacter l'agence au 01.23.45.67.89</i></h3>
+            <p><strong>Pour une prise de rendez-vous pour une visite :</strong></p>
+            <p><i>Contacter l'agence au 01.23.45.67.89</i></p>
         </article>
     </section>
 
-
-        <h4>Pour toute autre demande, vous pouvez utiliser le formulaire de contact suivant :</h4>
+    <!--formulaire-->
+        <p class="other-request"><strong>Pour toute autre demande, vous pouvez utiliser le formulaire de contact suivant :</strong></p>
     <section class="form">  
         <article class="formatting">
             <form action="form">                
@@ -97,14 +97,14 @@
     </section>
 
     <section class="find-us">     
-        <article class="social-media">
-            <h5>Retrouvez-nous sur nos réseaux sociaux</h5>
+        <article>
+            <p class="social-media"><strong>Retrouvez-nous sur nos réseaux sociaux</strong></p>
             <a href="https://www.facebook.com/"><img src="./asset/images/logos/facebook_f_logo_(2021).svg" alt="logo" width="50" height="50"></a>
             <a href="https://www.instagram.com/"><img src="./asset/images/logos/instagram_logo_2016.svg" alt="logo"width="50" height="50"></a>
             <a href="https://www.youtube.com/"><img src="./asset/images/logos/youtube_social_white_square_(2017).svg" alt="logo" width="50" height="50"></a>
             <a href="https://www.linkedin.com/"><img src="./asset/images/logos/linkedIn_icon.svg" alt="logo"width="50" height="50"></a>
         
-            <h5>Et sur l'application</h5>
+            <p class="social-media"><strong>Et sur l'application</strong></p>
             <a href="googlemybusiness"><img src="./asset/images/logos/Google-My-Business_logo.svg" alt="logo"width="50" height="50"></a>
         </article>
 
