--- a/to_manage.html
+++ b/to_manage.html
@@ -55,11 +55,11 @@
     <section class="bloc_article">
         <!-- Service 1 -->
         <article class="article_1">
-            <header>
+            <div>
                     <h1 class="title_service">
                         Service 1
                     </h1>
-            </header>
+                </div>
             <main>
                     <img class="image_service_1" src="asset/images/to_manage/image_to_manage1.jpg" alt="image_home">
             </main>
@@ -79,11 +79,11 @@
         </article>
         <!-- Service 2 -->
         <article class="article_2">
-            <header>
+            <div>
                 <h1 class="title_service2">
                     Service 2
                 </h1>
-            </header>
+            </div>
             <main>
                 <img class="image_service2" src="asset/images/to_manage/image_to_manage2.jpg" alt="image_home_2">
             </main>
@@ -105,11 +105,11 @@
     <!-- Statistques -->
     <section class="bloc_stats">
         <!-- Titre -->
-        <header>
+        <div>
             <h1 class="title_stats">
                 Statistiques
             </h1>
-        </header>
+        </div>
         <!-- Logo -->
         <main>
             <div class="icone_stats">
@@ -139,7 +139,7 @@
     <footer>
         <div class="colonne">
             <div class="footer-logo">
-                <a href="index.html"><img class="logo" src="./asset/images/logo_white_150.png" alt="Logo"></a>
+                <a href="index.html"><img class="logo" src="./asset/images/logo_white_150.png" alt="Logo" width="150px" height="73px"></a>
                 <p>Retrouvez-nous sur les réseaux sociaux</p>
 
                 <ul class="social-media">
@@ -148,41 +148,42 @@
                     <li><i  id="insta" class="fa-brands fa-instagram"></i></li>
                 </ul>
             </div>
+            <div class="footer-queries">
+                <div class="footer-services">
+                    <h2>Services</h2>
 
-            <div class="footer-services">
-                <h2>Services</h2>
+                    <ul class="flex">
+                        <li><a href="buy.html">Achat</a></li>
+                        <li><a href="sell.html">Vendre</a></li>
+                        <li><a href="rent.html">Louer</a></li>
+                    </ul>
+                </div>
+                <div class="footer-access">
+                    <h2>Accès rapide</h2>
 
-                <ul class="flex">
-                    <li><a href="buy.html">Achat</a></li>
-                    <li><a href="sell.html">Vendre</a></li>
-                    <li><a href="rent.html">Louer</a></li>
-                </ul>
-            </div>
-            <div class="footer-access">
-                <h2>Accès rapide</h2>
+                    <ul class="flex">
+                        <li><a href="newsletter registration.html">Inscription newsletter</a></li>
+                        <li><a href="aboutus.html">Qui sommes-nous ?</a></li>
+                        <li><a href="offers.html">Nos offres d'emploi</a></li>
+                        <li><a href="customer-feedback.html">Avis client</a></li>
+                        <li><a href="sitemap.html">Plan du site</a></li>
+                    </ul>
+                </div>
+                <div class="footer-contact">
+                    <h2>Contact</h2>
 
-                <ul class="flex">
-                    <li><a href="newsletter registration.html">Inscription newsletter</a></li>
-                    <li><a href="aboutus.html">Qui sommes-nous ?</a></li>
-                    <li><a href="offers.html">Nos offres d'emploi</a></li>
-                    <li><a href="customer-feedback.html">Avis client</a></li>
-                    <li><a href="sitemap.html">Plan du site</a></li>
-                </ul>
+                    <ul class="flex">
+                        <li><a href="tel:06.08.16.45.22">06.08.16.45.22</a></li>
+                        <li><a href="mailto:contact@acgdimmo.fr">contact@acgdimmo.fr</li></a>
+                        <li><a target="_blank" href="https://www.google.fr/maps/place/87200+Saint-Junien/@45.8964635,0.802924,12z/data=!3m1!4b1!4m6!3m5!1s0x47feeadaef87b0c9:0x8b265b0dc126d53e!8m2!3d45.88716!4d0.901165!16zL20vMDh6Xzkz?entry=ttu">Saint-Junien</a></li>
+                    </ul>
+                </div>
+                </div>
             </div>
-            <div class="footer-contact">
-                <h2>Contact</h2>
-
-                <ul class="flex">
-                    <li><a href="tel:06.08.16.45.22">06.08.16.45.22</a></li>
-                    <li><a href="mailto:contact@acgdimmo.fr">contact@acgdimmo.fr</li></a>
-                    <li><a target="_blank" href="https://www.google.fr/maps/place/87200+Saint-Junien/@45.8964635,0.802924,12z/data=!3m1!4b1!4m6!3m5!1s0x47feeadaef87b0c9:0x8b265b0dc126d53e!8m2!3d45.88716!4d0.901165!16zL20vMDh6Xzkz?entry=ttu"><li>Saint-Junien</li></a>
-                </ul>
-            </div>
-        </div>
-            <div class="copyright">
-                <p>acgdimmo©</p>
-            </div>
-    
-    </footer>
+                <div class="copyright">
+                    <p>acgdimmo©</p>
+                </div>
+        
+        </footer>
 </body>
 </html>
