Add media query in form

--- a/rent.html
+++ b/rent.html
@@ -46,12 +46,9 @@
                         <label>Prix :</label>
                         <input type="text" placeholder="Prix en euros">
                     </div>
-                    <div>
+                    <div class="group-button">
                         <button type="button">Filtres</button>
                         <button type="button">Recherche</button>
-                    </div>
-                    <div>
-                        
                     </div>
                 </form>
                 <div class="zone" style="background-color:blueviolet;">
@@ -84,7 +81,7 @@
                 <div  style="background-color:rgb(226, 43, 198);">
                     <img class="pict" src="./asset/images/rent/agent-immobilier-visite.jpg" alt="">
                 </div>
-                <div><h2>Informations sur les services</h2></div>
+                <div><h2>Liens utiles</h2></div>
                 <div>
                     <p>
                         Quam quia fugit eum sit. Aut mollitia autem id eaque. Veritatis adipisci dolorem non officiis exercitationem quos aut. Blanditiis eveniet officiis commodi est saepe quis est nihil. Aut blanditiis quisquam ducimus necessitatibus. Sapiente et qui minus reiciendis ut enim quae.
