--- a/contact.html
+++ b/contact.html
@@ -10,21 +10,25 @@
 </head>
 
 <body>
-<!--creation du header-->
-<header class="flex justify-content align-item">    
-    <img class="logo" src="./asset/images/logo x150.png" alt="logo">
-    <nav>
-        <ul class="menu flex justify-content">
-            <li><a class="title-txt" href="buy.html">Acheter</a></li>
-            <li><a class="title-txt" href="rent.html">Louer</a></li>
-            <li><a class="title-txt" href="sell.html">Vendre</a></li>
-            <li><a class="title-txt" href="contact.html">Contact</a></li>
-        </ul>            
-    </nav>
-    <div class="logo-mon-compte">
-        <a class="active" href="#Mon compte"><i class="fa-solid fa-user"></i> Mon compte</a>
-    </div>
-</header>
+<!--header commun-->
+    <header class="flex justify-content align-item">    
+        <a href="index.html"><img class="logo" src="./asset/images/logo x150.png" alt="logo"></a>
+        <input type="checkbox" id="check">
+            <label for="check" class="checkbtn">
+                <i class="fas fa-bars"></i>
+            </label>
+        <nav>
+            <ul class="menu flex justify-content">
+                <li><a class="title-txt" href="buy.html">Acheter</a></li>
+                <li><a class="title-txt" href="rent.html">Louer</a></li>
+                <li><a class="title-txt" href="sell.html">Vendre</a></li>
+                <li><a class="title-txt" href="contact.html">Contact</a></li>
+            </ul>            
+        </nav>
+        <div class="logo-mon-compte">
+            <a class="active" href="#Mon compte"><i class="fa-solid fa-user"></i> Mon compte</a>
+        </div>
+    </header>
 
 <main>
     <section class="page-title">
@@ -98,13 +102,13 @@
 
     <section class="find-us">     
         <article>
-            <p class="social-media"><strong>Retrouvez-nous sur nos réseaux sociaux</strong></p>
+            <p class="social-networks"><strong>Retrouvez-nous sur nos réseaux sociaux</strong></p>
             <a href="https://www.facebook.com/"><img src="./asset/images/logos/facebook_f_logo_(2021).svg" alt="logo" width="50" height="50"></a>
             <a href="https://www.instagram.com/"><img src="./asset/images/logos/instagram_logo_2016.svg" alt="logo"width="50" height="50"></a>
             <a href="https://www.youtube.com/"><img src="./asset/images/logos/youtube_social_white_square_(2017).svg" alt="logo" width="50" height="50"></a>
             <a href="https://www.linkedin.com/"><img src="./asset/images/logos/linkedIn_icon.svg" alt="logo"width="50" height="50"></a>
         
-            <p class="social-media"><strong>Et sur l'application</strong></p>
+            <p class="social-networks"><strong>Et sur l'application</strong></p>
             <a href="googlemybusiness"><img src="./asset/images/logos/Google-My-Business_logo.svg" alt="logo"width="50" height="50"></a>
         </article>
 
@@ -117,44 +121,54 @@
 
 </main>
 
+<!--footer commun-->
 <footer>
-    <div class="social-networks">
-        <img class="contrast" src="./asset/images/logo x150.png" alt="logo" width="150" height="75">
-        <h6>Retrouvez-nous sur nos réseaux sociaux</h6>
-        <a href="https://www.facebook.com/"><img src="./asset/images/logos/facebook_f_logo_(2021).svg" alt="logo" width="50" height="50"></a>
-        <a href="https://www.instagram.com/"><img src="./asset/images/logos/instagram_logo_2016.svg" alt="logo"width="50" height="50"></a>
-        <a href="https://www.youtube.com/"><img src="./asset/images/logos/youtube_social_white_square_(2017).svg" alt="logo" width="50" height="50"></a>
-        <a href="https://www.linkedin.com/"><img src="./asset/images/logos/linkedIn_icon.svg" alt="logo"width="50" height="50"></a>
-    </div>
-    <div class="services">
-        <h6>Services</h6>
-        <ul class="footer-menu">
-            <li><a href="buy.html">Acheter</a></li>
-            <li><a href="rent.html">Louer</a></li>
-            <li><a href="sell.html">Vendre</a></li>
-        </ul>
-    </div>
-    <div class="rapid-access">
-        <h6>Accès rapide</h6>
-        <ul>
-            <li><a href="newsletter registration.html">Inscription newsletter</a></li>
-            <li><a href="aboutus.html">Qui sommes nous ?</a></li>
-            <li><a href="offers.html">Nos offres d'emploi</a></li>
-            <li><a href="customers' opinion.html">Avis client</a></li>
-            <li><a href="sitemap.html">Plan du site</a></li>
-        </ul>
-    </div>
-    <div class="to-contact">
-        <h6>Contact</h6>
-        <ul>
-            <li><a href="phone">01.23.45.67.89</a></li>
-            <li><a href="mail">contact@acgdimmo.fr</a></li>
-            <li><a href="contact.html">saint-junien</a></li>
-        </ul>
-    </div>
+    <div class="colonne">
+        <div class="footer-logo">
+            <a href="index.html"><img class="logo" src="./asset/images/logo_white_150.png" alt="Logo" width="150px" height="73px"></a>
+            <p>Retrouvez-nous sur les réseaux sociaux</p>
 
-    <p class="copyright">acgdimmo©</p>
+            <ul class="social-media">
+                <li><i  id="fb" class="fa-brands fa-facebook"></i></li>
+                <li><i  id="tw" class="fa-brands fa-twitter"></i></li>
+                <li><i  id="insta" class="fa-brands fa-instagram"></i></li>
+            </ul>
+        </div>
+        <div class="footer-queries">
+            <div class="footer-services">
+                <h2>Services</h2>
 
+                <ul class="flex">
+                    <li><a href="buy.html">Achat</a></li>
+                    <li><a href="sell.html">Vendre</a></li>
+                    <li><a href="rent.html">Louer</a></li>
+                </ul>
+            </div>
+            <div class="footer-access">
+                <h2>Accès rapide</h2>
+
+                <ul class="flex">
+                    <li><a href="newsletter registration.html">Inscription newsletter</a></li>
+                    <li><a href="aboutus.html">Qui sommes-nous ?</a></li>
+                    <li><a href="offers.html">Nos offres d'emploi</a></li>
+                    <li><a href="customer-feedback.html">Avis client</a></li>
+                    <li><a href="sitemap.html">Plan du site</a></li>
+                </ul>
+            </div>
+            <div class="footer-contact">
+                <h2>Contact</h2>
+
+                <ul class="flex">
+                    <li><a href="tel:06.08.16.45.22">06.08.16.45.22</a></li>
+                    <li><a href="mailto:contact@acgdimmo.fr">contact@acgdimmo.fr</li></a>
+                    <li><a target="_blank" href="https://www.google.fr/maps/place/87200+Saint-Junien/@45.8964635,0.802924,12z/data=!3m1!4b1!4m6!3m5!1s0x47feeadaef87b0c9:0x8b265b0dc126d53e!8m2!3d45.88716!4d0.901165!16zL20vMDh6Xzkz?entry=ttu">Saint-Junien</a></li>
+                </ul>
+            </div>
+            </div>
+        </div>
+            <div class="copyright">
+                <p>acgdimmo©</p>
+            </div>
 
 </footer>
 
