--- a/rent.html
+++ b/rent.html
@@ -43,7 +43,7 @@
                         <input type="text" placeholder="Adresse, département, région, etc...">
                     </div>
                     <div>
-                        <label>Prix :</label>
+                        <label class="lab-pri">Prix :</label>
                         <input type="text" placeholder="Prix en euros">
                     </div>
                     <div class="group-button">
