--- a/authentification.html
+++ b/authentification.html
@@ -7,7 +7,7 @@
     <title>authentication</title>
 </head>
 <!--haeder création-->
-<body>
+</body>
         <header>
         <img class="logoacgd" src="asset/images/logo x150.png" alt="logoacgd">
         <nav>
@@ -19,10 +19,20 @@
             </ul>
         </nav>
         <button>
-            <a href="">mon compte</a>
+            <a href="">me connecter</a>
         </button>
     </header>
 
 </body>
+<main>
+    <form class="form_container">
+        <p class="form_container_heading">MON ESPACE</p>
+        <input class="form_container_inputs" type="email" placeholder="email@gmail.com">
+        <input class="form_container_inputs" type="password" placeholder="*****">
+        <button class="form_container_button">CONNEXION</button>
+        <P>Vous n'avez pas de compte? <a href="">Créer un compte!</a></P>
+    </form>
+    <img src="asset/images/agent-immobilier-ecologie.jpeg" alt="image agent-immobilier-ecologie"> 
+</main>
 
 </html> 
