finish: page complete responsive

--- a/sell.html
+++ b/sell.html
@@ -67,66 +67,54 @@
         </div>
     </main>
 
-    <footer class="flex footer full-width">
-        <div class="identity">
-            <a href="index.html">
-                <img class="hover-low-opacity" src="asset/images/logo_white_150.png" alt="Logo ACGDImmo" width="200px" height="">
-            </a>
-            <div class="social-media">
-                <p class="content-text">Retrouvez-nous sur nos réseaux sociaux</p>
-                <ul class="flex">
-                    <li>
-                        <a class="hover-low-opacity"><img src="asset/images/facebook-logo.png" alt="Logo de Facebook"></a>
-                    </li>
-                    <li>
-                        <a class="hover-low-opacity"><img src="asset/images/twitter-logo.png" alt="Logo de Twitter"></a>
-                    </li>
-                    <li>
-                        <a class="hover-low-opacity"><img src="asset/images/instagram-logo.png" alt="Logo de Instagram"></a>
-                    </li>
+    <footer>
+        <div class="colonne">
+            <div class="footer-logo">
+                <a href="index.html"><img class="logo" src="./asset/images/logo_white_150.png" alt="Logo" width="150px" height="73px"></a>
+                <p>Retrouvez-nous sur les réseaux sociaux</p>
+
+                <ul class="social-media">
+                    <li><i  id="fb" class="fa-brands fa-facebook"></i></li>
+                    <li><i  id="tw" class="fa-brands fa-twitter"></i></li>
+                    <li><i  id="insta" class="fa-brands fa-instagram"></i></li>
                 </ul>
             </div>
-        </div>
-        <ul class="quick-links-block flex">
-            <li class="quick-links">
-                <h2 class="footer-title">Services</h2>
-                <ul>
-                    <li><a class="content-text" href="buy.html">Achat</a></li>
-                    <li><a class="content-text" href="rent.html">Louer</a></li>
-                    <li><a class="content-text" href="sell.html">Vendre</a></li>
-                </ul>
-            </li>
-            <li class="quick-links">
-                <h2 class="footer-title">Accès rapide</h2>
-                <ul>
-                    <li><a class="content-text" href="">Inscription Newsletter</a></li>
-                    <li><a class="content-text" href="">Qui sommes-nous ?</a></li>
-                    <li><a class="content-text" href="">Nos offres d'emploi</a></li>
-                    <li><a class="content-text" href="">Avis client</a></li>
-                    <li><a class="content-text" href="">Plan du site</a></li>
-                 </ul>
-            </li>
-            <li class="quick-links">
-                <h2 class="footer-title">Contact</h2>
-                <ul class="contact-links">
-                    <li>
-                        <i class="fa-solid fa-phone"></i>
-                        <a class="content-text" href="">01.02.03.04.05</a>
-                    </li>
-                    <li>
-                        <i class="fa-regular fa-envelope"></i>
-                        <a class="content-text" href="">contact@acgdimmo.fr</a>
-                    </li>
-                    <li>
-                        <i class="fa-solid fa-location-dot"></i>
-                        <a class="content-text" href="">Saint-Junien</a>
-                    </li>
-                </ul>
-            </li>
-        </ul>
-        <div class="copyright full-width">
-            <p class="content-text">acgdimmo ©</p>
-        </div>
-    </footer>
+            <div class="footer-queries">
+                <div class="footer-services">
+                    <h2>Services</h2>
+
+                    <ul class="flex">
+                        <li><a href="buy.html">Achat</a></li>
+                        <li><a href="sell.html">Vendre</a></li>
+                        <li><a href="rent.html">Louer</a></li>
+                    </ul>
+                </div>
+                <div class="footer-access">
+                    <h2>Accès rapide</h2>
+
+                    <ul class="flex">
+                        <li><a href="newsletter registration.html">Inscription newsletter</a></li>
+                        <li><a href="aboutus.html">Qui sommes-nous ?</a></li>
+                        <li><a href="offers.html">Nos offres d'emploi</a></li>
+                        <li><a href="customer-feedback.html">Avis client</a></li>
+                        <li><a href="sitemap.html">Plan du site</a></li>
+                    </ul>
+                </div>
+                <div class="footer-contact">
+                    <h2>Contact</h2>
+
+                    <ul class="flex">
+                        <li><a href="tel:06.08.16.45.22">06.08.16.45.22</a></li>
+                        <li><a href="mailto:contact@acgdimmo.fr">contact@acgdimmo.fr</li></a>
+                        <li><a target="_blank" href="https://www.google.fr/maps/place/87200+Saint-Junien/@45.8964635,0.802924,12z/data=!3m1!4b1!4m6!3m5!1s0x47feeadaef87b0c9:0x8b265b0dc126d53e!8m2!3d45.88716!4d0.901165!16zL20vMDh6Xzkz?entry=ttu">Saint-Junien</a></li>
+                    </ul>
+                </div>
+                </div>
+            </div>
+                <div class="copyright">
+                    <p>acgdimmo©</p>
+                </div>
+        
+        </footer>
 </body>
 </html>
