modif section Notre agence

--- a/index.html
+++ b/index.html
@@ -185,10 +185,10 @@
                 <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
                 <div class="center_button">
                     <div class="button_contact">
-                        <button><a href="contact.html">Nous contacter</a></button>
+                        <button><a href="estimate.html">Estimons votre bien</a></button>
                     </div>
                     <div class="button_estimate">
-                        <button><a href="estimate.html">Estimer votre bien</a></button>
+                        <button><a href="to_manage.html">Gérons votre bien</a></button>
                     </div>
                 </div>
             </div>
