--- a/estimate.html
+++ b/estimate.html
@@ -13,7 +13,11 @@
     <!--Partie Header-->
 
     <header class="flex justify-content align-item">    
-        <img class="logo" src="./asset/images/logo x150.png" alt="logo">
+        <a href="index.html"></a><img class="logo" src="./asset/images/logo x150.png" alt="logo">
+        <input type="checkbox" id="check">
+            <label for="check" class="checkbtn">
+                <i class="fas fa-bars"></i>
+        </label>
         <nav>
             <ul class="menu flex justify-content">
                 <li><a class="title-txt" href="buy.html">Acheter</a></li>
