--- a/index.html
+++ b/index.html
@@ -84,15 +84,23 @@
             <div class="news">
                 <h1>Les actualités de l'immobilier</h1>
                 <div class="news_slide">
-                    <div class="news_1"><a class="activ_news" href="#">Lorem ipsum first</a></div>
-                    <div class="news_2"><a class="activ_news" href="#">Lorem ipsum second</a></div>
-                    <div class="news_3"><a class="activ_news" href="#">Lorem ipsum third</a></div>
-                    <div class="news_all">
-                        <a class="activ_news_all" href="#"><span>Toutes nos actualités</span></a>
-                        <div>
-                            <a class="activ_news_all_btn" href="#"><span>&rsaquo;</span></a>
+                    <div class="size_flex">
+                        <div class="news_1"><a class="activ_news" href="#">Lorem ipsum first</a></div>
+                    </div>
+                    <div class="size_flex">
+                        <div class="news_2"><a class="activ_news" href="#">Lorem ipsum second</a></div>
+                    </div>
+                    <div class="size_flex">
+                        <div class="news_3"><a class="activ_news" href="#">Lorem ipsum third</a></div>
+                    </div>
+                    <div class="size_flex">
+                        <div class="news_all">
+                            <a class="activ_news_all" href="#"><span>Toutes nos actualités</span></a>
+                            <div>
+                                <a class="activ_news_all_btn" href="#"><span>&rsaquo;</span></a>
+                            </div>
                         </div>
-                    </div> 
+                    </div>
                 </div>
         </section>
 
