Add menu burger

--- a/rent.html
+++ b/rent.html
@@ -22,6 +22,9 @@
         <div class="logo-mon-compte">
             <a class="active" href="to_manage.html"><i class="fa-solid fa-user"></i>Mon compte</a>
         </div>
+        <div class="logo-alter">
+            <a href="#"><i class="fa-solid fa-bars"></i></a>
+        </div>
     </header>
     <main>
         <div>
